--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: open_sans;
-    src: url(opne_sans/static/OpenSans-Regular.ttf);
+    src: url(static/OpenSans-Regular.ttf);
 }
 
 * {
